[gd_scene load_steps=27 format=2]

[ext_resource path="res://art/money-orb.png" type="Texture" id=1]
[ext_resource path="res://art/merchant.png" type="Texture" id=2]
[ext_resource path="res://scripts/MerchantPlanet.gd" type="Script" id=3]
[ext_resource path="res://scenes/dialogue/DialogueManager.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=17]
radius = 49.0102

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 140, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 220, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 260, 0, 20, 20 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 73, 34 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 73, 0, 73, 34 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 73, 34 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 73, 0, 73, 34 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "talking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=23]
radius = 23.7697

[node name="MerchantPlanet" type="RigidBody2D"]
mode = 1
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 17 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 18 )
frame = 12
playing = true

[node name="Merchant" type="AnimatedSprite" parent="."]
position = Vector2( 26, -45 )
rotation = 0.288871
frames = SubResource( 22 )
animation = "idle"
frame = 1
playing = true

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -16, -47 )
shape = SubResource( 23 )

[node name="DialogueManager" parent="." instance=ExtResource( 4 )]

[node name="DialogSpot" type="Node2D" parent="."]
position = Vector2( -50, -130 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="finished" from="DialogueManager" to="." method="_on_DialogueManager_finished"]
